[package]
name = "diehl_to_iceberg"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.32"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
parquet = "57.3.0"
hex = "0.4.3"
quick-xml = "0.39.2"
itertools = "0.14.0"
anyhow = "1.0.102"
iceberg = { git = "https://github.com/apache/iceberg-rust", branch = "main" }